# droplet-shape-solver

./: .gitignore  CONTRIBUTORS  LICENSE  Makefile  Pipfile  README.md  droplet-shape-solver.code-workspace  environment.yml  pyproject-setuptools.toml  pyproject.toml  requirements-dev.txt  requirements-extras.txt  requirements-notebook.txt  requirements-tests.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
adsa/: __init__.py  analysis.py  cli.py  demo.py  solver.py  units.py  visualisation.py
content/: drop_solver.ipynb
examples/: droplet_shape_simulation.py  three_d_shape.py  using_package.ipynb
notebooks/: drop_solver.ipynb  using_package.ipynb
src/adsa/: __init__.py  analysis.py  cli.py  demo.py  solver.py  solver_old.py  threed.py  units.py  visualisation.py
tests/: test_pytest.py
