[tool.poetry]
name = "adsa"
version = "0.0.0"
description = "A Young-Laplace equation solver for axisymmetric droplets."
authors = ["Juuso Korhonen <juusokorhonen@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]

[tool.poetry.dependencies]
python = "^3.11"
scipy = "^1.12.0"
llvmlite = "^0.41.1"
numba = "^0.58.1"
numpy = "^1.26.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
mypy = "^1.8.0"
pycodestyle = "^2.11.1"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-pycodestyle = "^2.3.1"
tox = "^4.12.1"

[tool.poerty.group.notebook.dependencies]
matplotlib = ">=3.7"
matplotlib-inline = ">=0.1"
pandas = ">=2.0"
Pillow = ">=9.5"
seaborn = ">=0.12"
ipython = ">=8.13"
ipykernel = ">=6.23"
jupyter = ">=1.0"
nbconvert = ">=7.4"
nbformat = ">=5.9"
widgetsnbextension = ">=4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "src/adsa/__init__.py:__version__",
    "pyproject.toml:version",
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "poetry build"
