[tool.poetry]
name = "adsa"
version = "0.0.0"
description = "A Young-Laplace equation solver for axisymmetric droplets."
authors = ["Juuso Korhonen <juusokorhonen@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
packages = [{ include = "adsa", from = "src" }]

[tool.poetry.scripts]
adsa-cli = "adsa.cli:cli"

[tool.poetry.dependencies]
python = "^3.12"
scipy = "^1.13.0"
llvmlite = "^0.42.0"
numba = "^0.59.1"
numpy = "^1.26.4"
lazy-loader = "^0.4"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
mypy = "^1.9.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"

[tool.poetry.group.extras.dependencies]
matplotlib = "^3.8.4"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=adsa"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
mypy_path = "adsa"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.black]
line-length = 122

[tool.pycodestyle]
max-line-length = 122
