[metadata]
name = adsa
version = attr: src.VERSION
author = "Juuso Korhonen"
author_email = "juusokorhonen on github.com",
description = "A Young-Laplace equation solver for axisymmetric droplets."
long_description = file: README.md, LICENSE, CONTRIBUTORS
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
url = "https://github.com/juusokorhonen/droplet-shape-solver/",
project_urls =
	Source Code = https://github.com/juusokorhonen/droplet-shape-solver/

[options]
zip_safe = False
package_dir=
    =src
packages = find:

[options.packages.find]
where=src

[pycodestyle]
max-line-length = 99

[tool.pytest]
addopts = --pycodestyle

[flake8]
exclude = build/*, dist/*, *.egg-info
max-line-length = 99