[metadata]
name = adsa
version = attr: adsa.VERSION
author = Juuso Korhonen
author_email = juusokorhonen on github.com
description = A Young-Laplace equation solver for axisymmetric droplets.
long_description = file: README.md, LICENSE, CONTRIBUTORS
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
url = "https://github.com/juusokorhonen/droplet-shape-solver/",
project_urls =
	Source Code = https://github.com/juusokorhonen/droplet-shape-solver/

[options]
zip_safe = False
packages = adsa
python_requires = >=3.7.4
install_requires =
  lazy_import >=0.2
  scipy >=1.7
  numpy >=1.21
  Pint >=0.18
  matplotlib >=3.5

[options.extras_require]
extras =
  pandas >=1.3
  Pillow >=9.0
  seaborn >=0.11
  ipykernel >=6.9
  ipython >=7.31
  ipywidgets >=7.6
  jupyter >=1.0
  jupyter-client >=7.1
  jupyter-console >=6.4
  jupyter-core >=4.9
  matplotlib-inline >=0.1
  nbconvert >=6.4
  nbformat >=5.1
  widgetsnbextension >=3.5
tests =
  flake8 >=4.0
  mypy >=0.9
  pycodestyle >=2.8
  pytest >=7.0
  pytest-cov >=3.0
  pytest-pycodestyle >=2.2
  tox >=3.24
  pylint >=2.12

[options.entry_points]
console_scripts =
	adsa-cli = adsa.cli:cli

[options.package_data]
adsa = py.typed

[pycodestyle]
max-line-length = 142

[flake8]
max-line-length = 142
exclude =
    .git,
    __pycache__,
    build,
    build/*,
    dist,
    dist/*,
    *.egg-info,
    venv,
    venv/*
max-complexity = 10
